icon and scrollbar fix

--- a/webpage.css
+++ b/webpage.css
@@ -14,7 +14,6 @@ body {
     scrollbar-width: none !important;
     -ms-overflow-style: none !important;
     scrollbar-width: none !important;
-
     scroll-behavior: smooth;
 }
 
@@ -39,7 +38,7 @@ a:hover {
     display: flex;
     padding: 75px;
     padding-right: 0px;
-    width: 650px;
+    width: 725px;
     height: 100%;
     flex-direction: column;
 }
@@ -54,6 +53,7 @@ a:hover {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    scrollbar-width: none;
     width: 100%;
     height: 100%;
 }
@@ -118,17 +118,18 @@ a:hover {
     }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 799px) {
     #text-container {
         display: flex;
         padding: 50px;
         padding-right: 0px;
-        width: 78%;
+        width: 550px;
     }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 599px) {
     #text-container {
+        width: 78%;
         padding: 25px;
         padding-right: 0px;
     }
